fix DM alignment

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,8 +1,8 @@
 .bg {
     width: 100%;
-    height: 90vh;
+    height: 92vh;
     overflow: auto;
-    background-color: white;
+    background-color: transparent;
 }
 
 .navbar-group {
